???????? - 1.07
    - Added helper functions: dessert_timevaladd, dessert_timeval2ms, dessert_ms2timeval,
      dessert_timevaladd2
    - The sysif MAC is only derived from the eth0 address, if this MAC addr is not yet
      used. This allows to run multiple daemons on the same node.
    - Added "show uptime" CLI command.

20110720 - 1.06
    - Fixed heap corruption bug
    - Replaced size_t type by uint32_t
    - Replaced some left u_int* by uint*_t
    - Replaced uint8_t by bool where semantically appropriate
    - Fixed several issues in log message prints
    - Fixed display of scheduled time for tasks with unknown function name
    - Fixed two compiler warnings due to missing function declarations in header
    - libtool version = 1.12.1

20110720 - 1.05
    - Fixed bugs in packet filter
    - Removed legacy defines that are replaced by enums
    - Replaced int return values by enum types
    - Added enum for periodics return codes
    - The filter function is now called always before the mesh callbacks are invoked
    - Added min, max macros (if they are not already defined)
    - Added token bucket implementation with 3 policies
    - Token bucket support unlimited or tail drop queueing of packets
    - "show tasks" CLI command to show the currently registered (periodic) tasks
    - Implemented data structure and functions to map function pointer to names
    - libtool version = 1.11.1


20110712 - 1.04
    - Added CLI show function for monitor configuration
    - Added packet filter support (untested)
    - Merged dessert-extra
    - Beautified code (a little bit)
    - libtool version = 1.10.1

20110621 - 1.03
    - When binding to the IPv6 socket for the CLI fails, IPv4 is tried
    - Introduced loglevel LOG_TRACE > LOG_DEBUG for even more verbose output
    - Several preprocessor macros in dessert.h are now contained in enums
    - Renamed variable from bool to boolean to enable include of stdbool.h