@@ -491,6 +491,7 @@ int dessert_init(const char* proto, int version, uint16_t opts);
 int dessert_pid(char* pidfile);
 int dessert_run(void);
 void dessert_exit(void);
+uint32_t dessert_get_uptime_ms();
 
 /***************************************************************************//**
  * @}
